# LangChain-Project

./: .gitignore  Langchain.py  alembic.ini  embeddings.db  main.py  pyproject.toml  requirements.txt  test.db  trial.ipynb  try.py
apis/: auth.py  db.py  logger.py  models.py  schemas.py  token_gen.py
apis/routers/: chat.py  login.py  user.py
app/: embeddings.py  handle_llm.py  vectorstore.py
faiss_index/: index.faiss  index.pkl
hack-bot/: env.py
hack-bot/versions/: 1bb04b7989ac_initial_migration.py  38d7caebf456_added_title_to_session.py  9a2ab0537434_first_commit.py  f2c5a3f5983e_initial_migration.py
utils/: constants.py  crud.py  exceptions.py  utils.py
