[tool.poetry]
name = "hack-bot"
version = "0.1.0"
description = "Bot that teaches you hacking without restrictions"
authors = ["het.saraiya <hetsaraiya06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.11"
langchain-core = "^0.3.24"
langchain-groq = "^0.2.1"
fastapi = "^0.115.6"
greenlet = "^3.1.1"
langchain-community = "^0.3.11"
langchain-voyageai = "^0.1.3"
huggingface = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
